--- a/app/views/illnesses/_index_timeline_element.html.erb
+++ b/app/views/illnesses/_index_timeline_element.html.erb
@@ -6,7 +6,7 @@
       <p><small><i class="fa fa-clock-o"> </i><%= if newest; "Oprettet: #{illness.created_at.strftime('%d-%m-%Y')}"; else "Opdateret: #{illness.updated_at.strftime('%d-%m-%Y')}"; end; %></small></p>
       <div style="text-decoration: none !important;">
       <%= link_to controller: :illnesses, action: :category, category: illness.category do %>
-          <small><p><i class="fa fa-drivers-license"></i> illness.category</p></small>
+          <small><p><i class="fa fa-drivers-license"></i> <%= illness.category %></p></small>
       <% end %>
       </div>
     </div>
