--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -39,7 +39,7 @@
         <%= link_to 'Log ud', destroy_user_session_path, method: :delete, class: 'btn btn-danger btn-lg btn3d' %>
   <% else %>
         <%= link_to new_user_session_path do %>
-            <div class="snip1303 ion-android-unlock"><span> </span>
+            <div class="snip1303 ion-android-unlock">
             </div>
         <% end %>
   <% end %>
