--- a/app/views/illnesses/_index_timeline_element.html.erb
+++ b/app/views/illnesses/_index_timeline_element.html.erb
@@ -3,7 +3,7 @@
   <div class="timeline-panel">
     <div class="timeline-body">
       <%= link_to illness_path(illness) do %>
-        <h6 class="timeline-title lead text-center"><span class="fa fa-drivers-license"> </span><%= illness.name %></h6>
+        <h6 class="timeline-title lead text-center"><span class="fa fa-drivers-license"> </span><br><%= illness.name %></h6>
       <% end %>
       <p><small><i class="fa fa-clock-o"> </i><%= if newest; "Oprettet: #{illness.created_at.strftime('%d-%m-%Y')}"; else "Opdateret: #{illness.updated_at.strftime('%d-%m-%Y')}"; end; %></small></p>
       <div style="text-decoration: none !important;">
