--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -46,7 +46,7 @@
 </nav>
 
 <% unless @no_bar %>
-<ol class="breadcrumb" style="box-shadow: 0px 0px 5px #b4b4b4">
+<ol class="breadcrumb m-0" style="box-shadow: 0px 0px 5px #b4b4b4">
   <%= render_breadcrumbs :separator => "<span class='lead'> » </span>".html_safe %>
 </ol>
 <% end %>
