--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
 <!-- Render navbar. -->
 <%= render 'layouts/navbar' %>
 <% if alert %>
-    <div class="container-fluid">
+    <div class="container-fluid bg-faded" style="padding: 25px;">
       <div class="col-md-6 offset-md-3">
         <p id="alert" class="alert alert-danger text-center"><%= alert %></p>
       </div>
     </div>
 <% end %>
 <% if notice %>
-    <div class="container-fluid">
+    <div class="container-fluid bg-faded" style="padding: 25px;"">
         <p id="notice" class="alert alert-info text-center"><%= notice %></p>
     </div>
 <% end %>
